# binance-trader

./: .gitignore  Justfile  README.md  pyproject.toml
src/binance_trader/: cli.py
src/binance_trader/clients/: __init__.py
src/binance_trader/clients/binance/: __init__.py  client.py
src/binance_trader/clients/requester/: __init__.py  base.py  httpx_requester.py  requests_requester.py  test_httpx_requester.py  test_requests_requester.py
