[project]
name = "binance-trader"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Caballero",email = "danielcaballero88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "binance_trader", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
