[project]
name = "binance-trader"
version = "0.1.0"
description = ""
authors = [{ name = "Daniel Caballero", email = "danielcaballero88@gmail.com" }]
requires-python = ">=3.14"
readme = "README.md"
dependencies = ["httpx>=0.28.1", "requests>=2.31.0,<3.0.0", "typer>=0.20.0"]

[tool.hatch.build.targets.sdist]
include = ["src/binance_trader"]

[tool.hatch.build.targets.wheel]
include = ["src/binance_trader"]

[tool.hatch.build.targets.wheel.sources]
"src/binance_trader" = "binance_trader"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
test = "bin.test:main"
"binance-trader" = "binance_trader.cli:main"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
# Adding "I" for sorting imports to the default options
select = ["E4", "E7", "E9", "F", "I"]

[dependency-groups]
dev = [
  "types-requests (>=2.32.4.20250913,<3.0.0.0)",
  "pytest (>=9.0.2,<10.0.0)",
  "pytest-mypy (>=1.0.1,<2.0.0)",
  "pytest-cov (>=7.0.0,<8.0.0)",
  "ruff>=0.14.9",
]
